# text-to-time

./: .gitignore  Cargo.toml  OSPR2V-Vaja1a.docx  README.md  data.csv  main.py  map.data  network.data  out.txt
app/: Cargo.toml
data_loader/: Cargo.toml
wasm/: .rustc_info.json  Cargo.toml
wasm/pkg/: wasm.d.ts  wasm_bg.wasm
wasm/release/.fingerprint/bumpalo-19889e23b70fe783/: lib-bumpalo  lib-bumpalo.json
wasm/release/.fingerprint/log-f685c165d3e0a143/: lib-log  lib-log.json
wasm/release/.fingerprint/once_cell-a28cde2d8d1ff774/: lib-once_cell  lib-once_cell.json
wasm/release/.fingerprint/proc-macro2-56fada41ec06e3d8/: build-script-build-script-build  build-script-build-script-build.json
wasm/release/.fingerprint/proc-macro2-5a6e2208ad7b09cf/: lib-proc_macro2  lib-proc_macro2.json
wasm/release/.fingerprint/proc-macro2-987a17858d9b136c/: run-build-script-build-script-build  run-build-script-build-script-build.json
wasm/release/.fingerprint/quote-3131670cba4a1dda/: lib-quote  lib-quote.json
wasm/release/.fingerprint/syn-3c1b921c6abb8248/: lib-syn  lib-syn.json
wasm/release/.fingerprint/unicode-ident-b6034bb5de01e14e/: lib-unicode_ident  lib-unicode_ident.json
wasm/release/.fingerprint/wasm-bindgen-84cf200d9f8f4557/: build-script-build-script-build  build-script-build-script-build.json
wasm/release/.fingerprint/wasm-bindgen-backend-84fad7202aa6af27/: lib-wasm_bindgen_backend  lib-wasm_bindgen_backend.json
wasm/release/.fingerprint/wasm-bindgen-macro-88f3b681a272ea22/: lib-wasm_bindgen_macro  lib-wasm_bindgen_macro.json
wasm/src/: lib.rs
(+28 files in other folders)
