[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
network = {path = "../network"}
data_loader = {path = "../data_loader"}
wasm-bindgen = "0.2.93"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[package.metadata.scripts]
build = "cargo build --target wasm32-unknown-unknown --target-dir ./target --release && wasm-bindgen --target web --out-dir pkg ./target/wasm32-unknown-unknown/release/wasm.wasm"
